--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.6",
     "@supabase/supabase-js": "^2.87.1",
     "lucide-react": "^0.559.0",
     "next": "16.0.8",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-is": "^19.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
